# Annotations-Exporter

./: CMakeLists.txt  CMakeLists.txt~
AnnotationsExporter/: AnnotationsExporter.py  CMakeLists.txt
AnnotationsExporter/Resources/UI/: AnnotationsExporter.ui
